# xkcd_terminal

./: Cargo.toml  README.md
src/: main.rs
