[package]
name = "xkcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
reqwest = "0.11.12"
serde_json = "1.0.87"
termimage = "*"
image = "0.24.4"
viuer = "0.6.2"
rand = "0.8.5"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.tokio]
version = "1.21.2"
features = ["full"]
