[package]
name = "xkcd"
version = "0.1.0"
edition = "2021"
author = "jer <alphastrata@gmail.com"
description = """
This app prints a random xkcd image into your terminal, that's right, an image in your terminal. Yes, it's as bad as you think.
"""
keywords = ["termimage", "xkcd"]
publish = false

[dependencies]
anyhow = "1.0.66"
reqwest = "0.11.12"
serde_json = "1.0.87"
image = "0.24.4"
viuer = "0.6.2"
rand = "0.8.5"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.tokio]
version = "1.21.2"
features = ["full"]
